--- a/neighbourhoodx/templates/neighbourhoodx/set_up_neighbourhood.html
+++ b/neighbourhoodx/templates/neighbourhoodx/set_up_neighbourhood.html
@@ -1,24 +1,21 @@
 {% extends 'main.html' %}
+{% load bootstrap5 %}
 
 
 {% block content %}
+
 <div class="container">
     <strong>{{request.user.username}}</strong>
-    <form class="form" action="" method="post">
-        {% csrf_token %}
+{{ form.media }}
 
-        {% for field in form %}
-        <div class="form__group form__group">
-            <label for="room_name">{{field.label}}</label>
-            {{field}}
-        </div>
-        {% endfor %}
-
-        <button class="btn btn--main align-center" type="submit">Set Up</button>
-        {% for message in messages %}
-        <li>{{message}}</li>
-        {% endfor %}
+<div class="container">
+    <h1>Create Neighbourhood</h1>
+    <form action="" method="post">
+        {%csrf_token%}
+        {% bootstrap_form form %}
+        <input type="submit" class="btn btn-primary" value="Create">
     </form>
-
 </div>
+
+
 {% endblock content %}
