--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -1,7 +1,8 @@
 {% extends 'main.html' %}
 
-
 {% block content %}
-    heeeeeeeeeeeeeeeeeeeeey
+    <div class="container">
+        {{map | safe}}
+    </div>
 {% endblock content %}
     
