add resident form

--- a/neighbourhoodx/templates/neighbourhoodx/add_resident.html
+++ b/neighbourhoodx/templates/neighbourhoodx/add_resident.html
@@ -12,9 +12,8 @@
     <form action="" method="post">
         {%csrf_token%}
         {% bootstrap_form form %}
-        <input type="submit" class="btn btn-primary" value="Add>
+        <input type="submit" class="btn btn-primary" value="Add">
     </form>
 </div>
-
 
 {% endblock content %}
