create email message

--- a/templates/email/text_resident.html
+++ b/templates/email/text_resident.html
@@ -8,4 +8,6 @@
     <li><strong>Password:</strong> {{password}}</li>
 </ul>
 
+<h3>{{neighbourhood}} Administrator : <strong>{{administrator}}</strong></h3>
+
 <p>&copy;Lyons Albert (lyonsmasawa@gmail.com)</p>
