--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <a href="{% url 'add-resident' %}">add resident</a>
-<a href="">view residents</a>
+<a href="{% url 'view-residents' %}">view residents</a>
 <a href="">set up social service</a>
 <a href="">edit</a>
 <a href="">logout</a>
