--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <a href="{% url 'add-resident' %}">add resident</a>
 <a href="{% url 'view-residents' %}">view residents</a>
-<a href="">set up social service</a>
+<a href="{% url 'social-services' %}">set up social service</a>
 <a href="">edit</a>
 <a href="">logout</a>
 <div class="container" style="width: 100%; height: 10vh;">
