--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -5,7 +5,7 @@
 <a href="{% url 'view-residents' %}">view residents</a>
 <a href="{% url 'social-services' %}">set up social service</a>
 <a href="{% url 'post' %}">Message</a>
-<a href="">edit</a>
+<a href="{% url 'adjust' %}">Adjust</a>
 <a href="{% url 'logout' %}">logout</a>
 <div class="container" style="width: 100%; height: 10vh;">
     {{map | safe}}
