view other residents

--- a/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<a href="">view residents</a>
+<a href="{% url 'view-other-residents' %}">view residents</a>
 <a href="">add business</a>
 <a href="">Message</a>
 <a href="">profile</a>
