--- a/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <a href="{% url 'view-other-residents' %}">view residents</a>
 <a href="">add business</a>
-<a href="">Message</a>
+<a href="{% url 'resident-post' %}">Message</a>
 <a href="">profile</a>
 <a href="">Delete</a>
 <a href="{% url 'logout' %}">logout</a>
