--- a/neighbourhoodx/templates/neighbourhoodx/profile.html
+++ b/neighbourhoodx/templates/neighbourhoodx/profile.html
@@ -2,5 +2,6 @@
 
 
 {% block content %}
-    works
+    {{profile.username}}
+    <a href="{% url 'edit-profile' %}">edit</a>
 {% endblock content %}
