--- a/neighbourhoodx/templates/neighbourhoodx/login_register.html
+++ b/neighbourhoodx/templates/neighbourhoodx/login_register.html
@@ -33,7 +33,8 @@
                     <p class="text-center"><a href="#" class="facebook-login ">
                             <i class="fab fa-facebook"></i>Log in with Facebook
                         </a></p>
-                    <p class="text-center"><a href="#" class="password-reset">Forgot password?</a></p>
+                    <p class="text-center"><a href="{% url 'password_reset' %}"><i>Forgot Password?</i></a>
+                    </p>
                 </form>
                 <div class="sign-up">
                     Don't have an account? <a href="{% url 'register' %}" class="btn--link">Sign Up</a>
