--- a/neighbourhoodx/templates/neighbourhoodx/edit_profile.html
+++ b/neighbourhoodx/templates/neighbourhoodx/edit_profile.html
@@ -5,7 +5,7 @@
 
 
 
-{{resident.user.username}}
+{{resident.location}}
 
 {% if user_form.errors %}
 <div class="alert alert-danger alert-dismissible" role="alert">
