--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -1,19 +1,56 @@
 {% extends 'main.html' %}
+{% load bootstrap5 %}
 
 {% block content %}
-<a href="{% url 'add-resident' %}">add resident</a>
-<a href="{% url 'view-residents' %}">view residents</a>
-<a href="{% url 'social-services' %}">set up social service</a>
-<a href="{% url 'post' %}">Message</a>
-<a href="{% url 'adjust' %}">Adjust</a>
-<a href="{% url 'delete-neighbourhood' hood.id %}">Delete</a>
-<a href="{% url 'logout' %}">logout</a>
-<div class="container" style="width: 100%; height: 10vh;">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'adminDashboard' %}">Dashboard</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'add-resident' %}">Add Resident</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'social-services' %}">Add Social Service</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'post' %}">Create Post</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        More options
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{% url 'view-residents' %}">view Residents</a></li>
+                        <li><a class="dropdown-item" href="{% url 'adjust' %}">Adjust Neighbourhood</a></li>
+                        <li><a class="dropdown-item" href="{% url 'delete-neighbourhood' hood.id %}">Delete
+                                Neighbourhood</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="container" style="width: 100%; height: 50vh;">
     {{map | safe}}
 </div>
 
 {% for post in posts %}
-    {{post.body}}
+{{post.body}}
 {% endfor %}
-    {{hood.occupants}}
+{{hood.occupants}}
 {% endblock content %}
