--- a/neighbourhoodx/templates/neighbourhoodx/change_password.html
+++ b/neighbourhoodx/templates/neighbourhoodx/change_password.html
@@ -1,3 +1,6 @@
+{% extends 'main.html' %}
+{% load bootstrap5 %}
+
 {% block content %}
     <div class="form-content my-3 p-3">
         <div class="container">
