--- a/neighbourhoodx/templates/neighbourhoodx/delete_resident.html
+++ b/neighbourhoodx/templates/neighbourhoodx/delete_resident.html
@@ -1,4 +1,6 @@
 {% extends 'main.html' %}
+{% load bootstrap5 %}
+
 {% block content %}
 <main class="delete-item layout">
     <div class="container">
