--- a/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/resident_dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %}
+{% load bootstrap5 %}
 
 {% block content %}
 <a href="{% url 'view-other-residents' %}">view residents</a>
