--- a/templates/main.html
+++ b/templates/main.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Awwwards - Website Awards - Best Web Design Trends</title>
+    <title>NeighbourhoodX</title>
     <link rel="icon" href="https://assets.awwwards.com/assets/images/favicon.svg" type="image/svg+xml" />
 
 
@@ -35,7 +35,6 @@
 </head>
 
 <body>
-    {% include 'navbar.html' %}
     {% block content %}
 
 
