--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -55,8 +55,23 @@
     </div>
 </div>
 
-{% for post in posts %}
-{{post.body}}
-{% endfor %}
-{{hood.occupants}}
+<div class="container">
+    <br>
+    <p><strong>Resident Posts</strong></p>
+    <div class="row">
+        {% for post in posts %}
+        <div class="col-md-3">
+            <div class="card text-white bg-dark" style="max-width: 15rem;">
+                <div class="card-header">{{post.posted}}</div>
+                <div class="card-body">
+                    <h5 class="card-title card post-card">{{post.body}}</h5>
+                    <p class="card-text">By: {{post.poster}}</p>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+</div>
+<!-- {{hood.occupants}} -->
 {% endblock content %}
