--- a/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
+++ b/neighbourhoodx/templates/neighbourhoodx/admin_dashboard.html
@@ -56,7 +56,7 @@
 </div>
 
 <div class="container">
-    <p class="text-center p-1">{{hood.address}} -- {{hood.location}}</p>
+    <p class="text-center p-1"><strong>{{hood.name}}</strong> Neighbourhood: {{hood.address}} -- {{hood.location}}</p>
     <p><strong>Resident Posts</strong></p>
     <div class="row">
         {% for post in posts %}
