--- a/neighbourhoodx/templates/neighbourhoodx/add_resident.html
+++ b/neighbourhoodx/templates/neighbourhoodx/add_resident.html
@@ -2,13 +2,12 @@
 {% load bootstrap5 %}
 
 {% block content %}
-
 <div class="container">
     <strong>{{request.user.username}}</strong>
 {{ form.media }}
 
 <div class="container">
-    <h1>Create Neighbourhood</h1>
+    <h1>Add resident to the neighbourhood</h1>
     <form action="" method="post">
         {%csrf_token%}
         {% bootstrap_form form %}
