--- a/templates/admin_nav.html
+++ b/templates/admin_nav.html
@@ -8,8 +8,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Search for ..." aria-label="Search">
+                    <button class="btn btn--dark" type="submit">Search</button>
                 </form>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'add-resident' %}">Add Resident</a>
