--- a/neighbourhoodx/templates/neighbourhoodx/add_resident.html
+++ b/neighbourhoodx/templates/neighbourhoodx/add_resident.html
@@ -9,7 +9,9 @@
         <form action="" method="post">
             {%csrf_token%}
             {% bootstrap_form form %}
-            <input type="submit" class="btn btn-dark" value="Add">
+            <p class="text-center">
+            <input type="submit" class="btn btn--main" value="Add Resident">
+            </p>
         </form>
     </div>
 </div>
