--- a/static/css/main.css
+++ b/static/css/main.css
@@ -79,6 +79,19 @@
     align-items: center;
     margin-top: -5rem;
 }
+.servicesx{
+    position: absolute;
+    top: 10%;
+    left: 18%;
+    z-index: 2;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 /*========== components ==========*/
 
 
