--- a/static/css/main.css
+++ b/static/css/main.css
@@ -92,6 +92,19 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
+.neighsx{
+    position: absolute;
+    top: 10%;
+    left: 18%;
+    z-index: 2;
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 /*========== components ==========*/
 
 
