--- a/static/css/main.css
+++ b/static/css/main.css
@@ -66,6 +66,8 @@
     padding: 2%;
     background-color: black;
     color: white;
+    box-shadow: 0px 0px 5px black;
+    border-radius: 4px;
 }
 .resx{
     position: absolute;
@@ -103,7 +105,6 @@
     justify-content: center;
     align-items: center;
     margin-top: 1rem;
-    margin-bottom: 1rem;
 }
 /*========== components ==========*/
 
@@ -159,4 +160,53 @@
     color: white;
     font-weight: 900;
     white-space: nowrap;
+}
+/*==============================
+=>  Delete Item
+================================*/
+
+.delete-item.layout .layout__box {
+    max-width: 68rem;
+}
+
+/*========== Layout Box ==========*/
+
+.layout__box {
+    width: 65%;
+    max-width: 48rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -46%);
+    background-color: var(--color-dark);
+    border-radius: 1rem;
+    box-shadow: 1px 1px 6px 3px rgba(0, 0, 0, 0.1);
+}
+
+.layout__boxHeader {
+    display: flex;
+    padding: 1.5rem;
+    background-color: var(--color-dark-light);
+}
+
+.layout__boxTitle {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+}
+
+.layout__boxTitle h3 {
+    text-transform: uppercase;
+    font-weight: 500;
+    color: var(--color-light);
+}
+
+.layout__boxTitle svg {
+    width: 1.6rem;
+    height: 1.6rem;
+    fill: black;
+}
+
+.layout__body {
+    margin: 3rem;
 }
