--- a/neighbourhoodx/templates/neighbourhoodx/residents.html
+++ b/neighbourhoodx/templates/neighbourhoodx/residents.html
@@ -11,13 +11,13 @@
         <h4 class="text-center">Address: {{hood.address}}</h4>
         <h5 class="text-center">Coordinates: {{hood.location}}</h5>
         <hr>
-        <h1 class="text-center p-1"><strong>Occupants</strong></h1>
+        <h3 class="text-center p-1"><strong>Occupants: {{hood.occupants}}(count includes Administrator)</strong></h3>
         <div class="row res-form ssxx">
             {% for resident in residents %}
             <div class="col">
                 <div class="card bg-black mb-1 brt" style="max-width: 12rem;">
                     <div class="card-body">
-                        <a class="f-right" href="{% url 'delete-resident' resident.id %}"><i class="fa fa-times"
+                        <a class="f-right text-decoration-none text-white" href="{% url 'delete-resident' resident.id %}"><i class="fa fa-times"
                                 aria-hidden="true"></i></a>
                         <p>
                             {% if resident.profile_photo %}
