--- a/neighbourhoodx/templates/neighbourhoodx/login_register.html
+++ b/neighbourhoodx/templates/neighbourhoodx/login_register.html
@@ -1,59 +1,57 @@
 {% extends 'main.html' %}
 {% block content %}
 {% load static %}
+{% load bootstrap5 %}
 
-{% if page == 'login' %}
+<div class="container-fluid bgx">
+    {% if page == 'login' %}
 
-<div class="container " id="premiumz">
-    <div class="full_login" id="wrapper">
-        <div class="layout__box__x">
-            <div class="layout__boxHeader">
-                <div class="layout__boxTitle">
-                    <h3>Login</h3>
-                </div>
-            </div>
-            <div class="layout__body">
-                <form action="" method="post">
+    <div class="l-gx" style="max-width:30rem;">
+        <div class="container">
+            <div class="form-data">
+                <form action="" method="post" class="fm ressx">
                     {% csrf_token %}
-                    <div class="form__group form__group">
-                        <label for="">Username:</label>
-                        <input type="text" name="username" id="" placeholder="Enter Username" required>
-                    </div>
-                    <div class="form__group form__group">
-                        <label for="">Password:</label>
-                        <input type="password" name="password" id="" placeholder="Enter password" required>
-                    </div>
+                    <img src="{% static 'images/pkx.png' %}" alt="" class="img-fluid">
+                    <div class="dix">
+                        <div class="form__group">
+                            <label for="" class="fm">Username:</label>
+                            <input type="text" name="username" id="" placeholder="Enter Username" required>
+                        </div>
+                        <p></p>
+                        <div class="form__group">
+                            <label for="" class="fm">Password:</label>
+                            <input type="password" name="password" id="" placeholder="Enter password" required>
 
-                    {% for message in messages %}
-                    <li>{{message}}</li>
-                    {% endfor %}
-
-                    <p class="text-center"><input type="submit" class="btn btn--main" value="Login"></p>
-                    <p class="text-center">OR</p>
-                    <p class="text-center"><a href="#" class="facebook-login ">
-                            <i class="fab fa-facebook"></i>Log in with Facebook
-                        </a></p>
-                    <p class="text-center"><a href="{% url 'password_reset' %}"><i>Forgot Password?</i></a>
+                        </div>
+                    </div>
+                    <p class="text-center">
+                        <input type="submit" value="Login" class="btn btn--main" style="width: max-content;">
                     </p>
+                    <span class="has-separator">OR</span>
+                    <a href="#" class="text-center text-decoration-none facebook-login">
+                        <i class="fab fa-facebook"></i>Log in with Facebook
+                    </a>
+                    <a href="#" class="password-reset">Forgot password?</a>
+                    <div class="sign-up">
+                        Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+                    </div>
                 </form>
-                <div class="sign-up">
-                    Don't have an account? <a href="{% url 'register' %}" class="btn--link">Sign Up</a>
-                </div>
             </div>
         </div>
     </div>
-
-</div>
-{% else %}
-<div class="container">
-    <div class="full-login" id="wrapper">
-        <div class="layout__box__x">
+    {% else %}
+    <div class="container">
+        <div class="layout__box">
             <div class="layout__boxHeader">
                 <div class="layout__boxTitle">
                     <h3>Register</h3>
                 </div>
-            </div> 
+            </div>
             <div class="layout__body">
+                <div class="logo-register">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
+                        alt="">
+                </div>
                 <form class="form" action="" method="post">
                     {% csrf_token %}
 
@@ -77,9 +75,6 @@
                         </svg>
                         Register
                     </button>
-                    {% for message in messages %}
-                    <li>{{message}}</li>
-                    {% endfor %}
                 </form>
 
                 <div class="auth__action">
