--- a/static/css/main.css
+++ b/static/css/main.css
@@ -368,9 +368,11 @@
     font-size: 1.3rem;
     color: #999999;
     position: relative;
-    margin-bottom: 2.5rem;
+    margin-bottom: 2rem;
 }
-
+.sl{
+    box-shadow: 0px 0px 1px rgb(0, 238, 255);
+}
 .has-separator::before,
 .has-separator::after {
     content: "";
@@ -395,7 +397,7 @@
     font-weight: bold;
     color: #a0b9f0;
     margin-bottom: 1rem;
-    
+
 }
 
 .facebook-login i {
@@ -404,23 +406,25 @@
 }
 
 .password-reset {
-    font-size: 1.2rem;
-    color: #003569
+    font-size: 1rem;
+    color: white;
+
 }
 
 .sign-up {
     text-align: center;
-    font-size: 1.4rem;
-    color: #262626;
+    font-size: 1rem;
+    color: white;
     padding: 1rem 0;
-    background-color: #fff;
-    border: 2px solid #eee;
-    margin: 1rem 0;
+    margin: .5rem 0;
 }
-
+.sd{
+    background-color: white;
+    color: black;
+}
 .sign-up a {
-    color: #3897f0;
-    font-weight: bold;
-    font-size: 1.2rem;
+    color: black;
+    font-weight: 900;
+    font-size: 1rem;
 }
 
