--- a/neighbourhoodx/templates/neighbourhoodx/login_register.html
+++ b/neighbourhoodx/templates/neighbourhoodx/login_register.html
@@ -33,58 +33,49 @@
                     </a>
                     <a href="{% url 'password_reset' %}" class="text-center password-reset">Forgot password?</a>
                     <div class="sign-up">
-                        Don't have an account? <a href="{% url 'register' %}" class="btn sd"> Register </a>
+                        Sign Up as Administrator? <a href="{% url 'register' %}" class="btn sd"> Register </a>
                     </div>
                 </form>
             </div>
         </div>
     </div>
     {% else %}
-    <div class="container">
-        <div class="layout__box">
-            <div class="layout__boxHeader">
-                <div class="layout__boxTitle">
-                    <h3>Register</h3>
-                </div>
-            </div>
-            <div class="layout__body">
-                <div class="logo-register">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
-                        alt="">
-                </div>
-                <form class="form" action="" method="post">
+    <div class="l-gx" style="max-width:35rem;">
+        <div class="container">
+            <div class="form-data">
+                <form action="" method="post" class="fm ressx">
                     {% csrf_token %}
+                    <img src="{% static 'images/pkx.png' %}" alt="" class="img-fluid">
+                    <div class="dix">
+                        {% for field in form %}
+                        <div class="form__group">
+                            <label for="field_name" style="font-size: 1.2rem;">{{field.label}}</label>
+                            {{field}}
+                        </div>
+                        {% endfor %}
 
-                    {% for field in form %}
-                    <div class="form__group form__group">
-                        <label for="room_name">{{field.label}}</label>
-                        {{field}}
                     </div>
-                    {% endfor %}
-
-                    <button class="btn btn--main align-center" type="submit">
-                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                            viewBox="0 0 32 32">
-                            <title>lock</title>
-                            <path
-                                d="M27 12h-1v-2c0-5.514-4.486-10-10-10s-10 4.486-10 10v2h-1c-0.553 0-1 0.447-1 1v18c0 0.553 0.447 1 1 1h22c0.553 0 1-0.447 1-1v-18c0-0.553-0.447-1-1-1zM8 10c0-4.411 3.589-8 8-8s8 3.589 8 8v2h-16v-2zM26 30h-20v-16h20v16z">
-                            </path>
-                            <path
-                                d="M15 21.694v4.306h2v-4.306c0.587-0.348 1-0.961 1-1.694 0-1.105-0.895-2-2-2s-2 0.895-2 2c0 0.732 0.413 1.345 1 1.694z">
-                            </path>
-                        </svg>
-                        Register
-                    </button>
+                    <p class="text-center">
+                        <button type="submit" class="btn pcv" style="width: max-content;">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                viewBox="0 0 32 32">
+                                <title>lock</title>
+                                <path
+                                    d="M27 12h-1v-2c0-5.514-4.486-10-10-10s-10 4.486-10 10v2h-1c-0.553 0-1 0.447-1 1v18c0 0.553 0.447 1 1 1h22c0.553 0 1-0.447 1-1v-18c0-0.553-0.447-1-1-1zM8 10c0-4.411 3.589-8 8-8s8 3.589 8 8v2h-16v-2zM26 30h-20v-16h20v16z">
+                                </path>
+                                <path
+                                    d="M15 21.694v4.306h2v-4.306c0.587-0.348 1-0.961 1-1.694 0-1.105-0.895-2-2-2s-2 0.895-2 2c0 0.732 0.413 1.345 1 1.694z">
+                                </path>
+                            </svg>
+                            Administrator Sign Up</button>
+                    </p>
+                    <div class="sign-up">
+                        Already have an account? <a href="{% url 'login' %}" class="btn sd"> Login </a>
+                    </div>
                 </form>
-
-                <div class="auth__action">
-                    <p>Already have an account?</p>
-                    <a href="{% url 'login' %}" class="btn btn--main">Login</a>
-                </div>
             </div>
         </div>
     </div>
-
 </div>
 
 {% endif %}
