--- a/static/css/main.css
+++ b/static/css/main.css
@@ -373,6 +373,14 @@
 .sl{
     box-shadow: 0px 0px 1px rgb(0, 238, 255);
 }
+.pcv{
+    box-shadow: 0px 0px 4px rgb(211, 252, 255);
+}
+.btn>svg {
+    fill: white;
+    width: 1.6rem;
+    height: 1.6rem;
+}
 .has-separator::before,
 .has-separator::after {
     content: "";
