style register page

--- a/neighbourhoodx/templates/neighbourhoodx/login_register.html
+++ b/neighbourhoodx/templates/neighbourhoodx/login_register.html
@@ -27,7 +27,7 @@
                     <p class="text-center">
                         <input type="submit" value="Login" class="btn btn--main sl" style="width: max-content;">
                     </p>
-                    <span class="has-separator text-center">OR</span>
+                    <span class="has-separator text-center"> - - - - - - - - &nbsp; OR &nbsp; - - - - - - - - </span>
                     <a href="#" class="text-center text-decoration-none facebook-login">
                         <i class="fab fa-facebook"></i>Log in with Facebook
                     </a>
