--- a/neighbourhoodx/templates/neighbourhoodx/login_register.html
+++ b/neighbourhoodx/templates/neighbourhoodx/login_register.html
@@ -5,42 +5,44 @@
 
 <div class="container-fluid bgx">
     {% if page == 'login' %}
+    <div class="container">
+        <div class="l-gx" style="max-width:30rem;">
+            <div class="container">
+                <div class="form-data">
+                    <form action="" method="post" class="fm ressx">
+                        {% csrf_token %}
+                        <img src="{% static 'images/pkx.png' %}" alt="" class="img-fluid">
+                        <div class="dix">
+                            <div class="form__group">
+                                <label for="" class="fm">Username:</label>
+                                <input type="text" name="username" id="" placeholder="Enter Username" required>
+                            </div>
+                            <p></p>
+                            <div class="form__group">
+                                <label for="" class="fm">Password:</label>
+                                <input type="password" name="password" id="" placeholder="Enter password" required>
 
-    <div class="l-gx" style="max-width:30rem;">
-        <div class="container">
-            <div class="form-data">
-                <form action="" method="post" class="fm ressx">
-                    {% csrf_token %}
-                    <img src="{% static 'images/pkx.png' %}" alt="" class="img-fluid">
-                    <div class="dix">
-                        <div class="form__group">
-                            <label for="" class="fm">Username:</label>
-                            <input type="text" name="username" id="" placeholder="Enter Username" required>
+                            </div>
                         </div>
-                        <p></p>
-                        <div class="form__group">
-                            <label for="" class="fm">Password:</label>
-                            <input type="password" name="password" id="" placeholder="Enter password" required>
-
+                        <p class="text-center">
+                            <input type="submit" value="Login" class="btn btn--main sl" style="width: max-content;">
+                        </p>
+                        <span class="has-separator text-center"> - - - - - - - - &nbsp; OR &nbsp; - - - - - - - -
+                        </span>
+                        <a href="#" class="text-center text-decoration-none facebook-login">
+                            <i class="fab fa-facebook"></i>Log in with Facebook
+                        </a>
+                        <a href="{% url 'password_reset' %}" class="text-center password-reset">Forgot password?</a>
+                        <div class="sign-up">
+                            Sign Up as Administrator? <a href="{% url 'register' %}" class="btn sd"> Register </a>
                         </div>
-                    </div>
-                    <p class="text-center">
-                        <input type="submit" value="Login" class="btn btn--main sl" style="width: max-content;">
-                    </p>
-                    <span class="has-separator text-center"> - - - - - - - - &nbsp; OR &nbsp; - - - - - - - - </span>
-                    <a href="#" class="text-center text-decoration-none facebook-login">
-                        <i class="fab fa-facebook"></i>Log in with Facebook
-                    </a>
-                    <a href="{% url 'password_reset' %}" class="text-center password-reset">Forgot password?</a>
-                    <div class="sign-up">
-                        Sign Up as Administrator? <a href="{% url 'register' %}" class="btn sd"> Register </a>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
     {% else %}
-    <div class="l-gx" style="max-width:35rem;">
+    <div class="l-gx" style="max-width:30rem;">
         <div class="container">
             <div class="form-data">
                 <form action="" method="post" class="fm ressx">
@@ -49,7 +51,7 @@
                     <div class="dix">
                         {% for field in form %}
                         <div class="form__group">
-                            <label for="field_name" style="font-size: 1.2rem;">{{field.label}}</label>
+                            <label for="field_name">{{field.label}}</label>
                             {{field}}
                         </div>
                         {% endfor %}
