--- a/static/css/main.css
+++ b/static/css/main.css
@@ -230,16 +230,7 @@
 }
 
 /* login */
-.logo img {
-    /* width: 10rem; */
-    margin-bottom: 1rem;
-}
-.full_login{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
+
 .fm{
     display: flex;
     flex-direction: column;
@@ -258,7 +249,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    height: 110vh;
+    min-height: 100vh;
     background: linear-gradient(to bottom,
             rgba(0, 153, 145, 0),
             rgba(0, 0, 0, 5)), url('../images/adminbg.jpg');
