--- a/neighbourhoodx/templates/neighbourhoodx/add_business.html
+++ b/neighbourhoodx/templates/neighbourhoodx/add_business.html
@@ -4,18 +4,20 @@
 
 {% block content %}
 
-<div class="container">
-    <strong>{{request.user.username}}</strong>
-{{ form.media }}
-
-<div class="container">
-    <h1>Add Business</h1>
-    <form action="" method="post">
-        {%csrf_token%}
-        {% bootstrap_form form %}
-        <input type="submit" class="btn btn-primary" value="Create">
-    </form>
+{% include 'res_nav.html' %}
+<div class="servicesx">
+    <div class="container res-form" style="max-width: 60rem; ">
+        {{form.media}}
+        <div class="container">
+            <h1>Add Social Services</h1>
+            <form action="" method="post">
+                {%csrf_token%}
+                {% bootstrap_form form %}
+                <p class="text-center">
+                    <input type="submit" class="btn btn--main" value="Add Business">
+                </p>
+            </form>
+        </div>
+    </div>
 </div>
-
-
 {% endblock content %}
